--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/weatherScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/weatherScene.fxml
@@ -3,14 +3,15 @@
 <?import javafx.scene.Group?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="weatherStackPane" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
+
+<AnchorPane fx:id="weatherAnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #201932;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.WeatherReportController">
    <children>
-      <Group>
+      <Group layoutX="30.0" layoutY="5.0">
          <children>
             <Pane layoutX="64.0" layoutY="8.0" prefHeight="99.0" prefWidth="244.0" style="-fx-background-color: #1b1b1b; -fx-background-radius: 10;">
                <children>
@@ -18,7 +19,7 @@
                      <children>
                         <Label fx:id="countryLocation" alignment="CENTER" contentDisplay="CENTER" prefHeight="30.0" prefWidth="237.0" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font size="20.0" />
+                              <Font name="PT Serif" size="20.0" />
                            </font>
                         </Label>
                      </children>
@@ -27,12 +28,12 @@
                      <children>
                         <Label fx:id="degree" alignment="CENTER" contentDisplay="CENTER" layoutX="-2.0" layoutY="9.0" prefHeight="56.0" prefWidth="206.0" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font name="Arial Bold" size="40.0" />
+                              <Font name="PT Serif" size="40.0" />
                            </font>
                         </Label>
                         <Label fx:id="weatherDescription" alignment="CENTER" layoutX="18.0" layoutY="57.0" prefHeight="17.0" prefWidth="166.0" textFill="WHITE">
                            <font>
-                              <Font name="Arial" size="13.0" />
+                              <Font name="PT Serif" size="13.0" />
                            </font>
                         </Label>
                      </children>
@@ -51,7 +52,7 @@
                   </Label>
                   <Label layoutX="12.0" layoutY="6.0" text="SUNSET" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif" size="11.0" />
                      </font>
                   </Label>
                   <Circle fx:id="sunsetIcon" fill="DODGERBLUE" layoutX="72.0" layoutY="63.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" />
@@ -69,7 +70,7 @@
                   </Label>
                   <Label layoutX="7.0" layoutY="6.0" text="FEELS LIKE" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif Caption" size="11.0" />
                      </font>
                   </Label>
                </children>
@@ -79,9 +80,9 @@
             </Pane>
             <Pane layoutX="64.0" layoutY="206.0" prefHeight="83.0" prefWidth="90.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                <children>
-                  <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" text="SUNRISE" textAlignment="CENTER" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="7.0" text="SUNRISE" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif" size="11.0" />
                      </font>
                   </Label>
                   <Label fx:id="sunriseHour" layoutX="7.0" layoutY="21.0" prefHeight="42.0" prefWidth="49.0" textFill="#a300a3">
@@ -112,9 +113,9 @@
                <children>
                   <Pane layoutX="9.0" layoutY="9.0" prefHeight="99.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="64.0" text="PRESSURE" textAlignment="CENTER" textFill="WHITE">
+                        <Label layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="64.0" text="PRESSURE" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font name="Arial Bold" size="11.0" />
+                              <Font name="PT Serif" size="11.0" />
                            </font>
                         </Label>
                         <Label fx:id="pressure" layoutX="14.0" layoutY="23.0" prefHeight="42.0" prefWidth="82.0" textFill="#a300a3">
@@ -130,9 +131,9 @@
                   </Pane>
                   <Pane layoutX="9.0" layoutY="116.0" prefHeight="83.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="HUMIDITY" textAlignment="CENTER" textFill="WHITE">
+                        <Label layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="HUMIDITY" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font name="Arial Bold" size="11.0" />
+                              <Font name="PT Serif" size="11.0" />
                            </font>
                         </Label>
                         <Label fx:id="humidity" layoutX="14.0" layoutY="21.0" prefHeight="42.0" prefWidth="56.0" textFill="#a300a3">
@@ -148,9 +149,9 @@
                   </Pane>
                   <Pane layoutX="9.0" layoutY="205.0" prefHeight="83.0" prefWidth="145.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                      <children>
-                        <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="VISIBILITY" textAlignment="CENTER" textFill="WHITE">
+                        <Label layoutX="14.0" layoutY="7.0" prefHeight="14.0" prefWidth="56.0" text="VISIBILITY" textAlignment="CENTER" textFill="WHITE">
                            <font>
-                              <Font name="Arial Bold" size="11.0" />
+                              <Font name="PT Serif" size="11.0" />
                            </font>
                         </Label>
                         <Label fx:id="visibility" layoutX="14.0" layoutY="21.0" prefHeight="42.0" prefWidth="82.0" textFill="#a300a3">
@@ -168,9 +169,9 @@
             </Group>
             <Pane layoutX="64.0" layoutY="299.0" prefHeight="83.0" prefWidth="120.0" style="-fx-background-color: #1b1b1b; -fx-border-radius: 10; -fx-background-radius: 10;">
                <children>
-                  <Label alignment="CENTER" layoutX="14.0" layoutY="7.0" text="WIND" textAlignment="CENTER" textFill="WHITE">
+                  <Label layoutX="14.0" layoutY="7.0" text="WIND" textAlignment="CENTER" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif" size="11.0" />
                      </font>
                   </Label>
                   <Label fx:id="windData" layoutX="11.0" layoutY="27.0" prefHeight="42.0" prefWidth="64.0" textFill="#a300a3">
@@ -193,12 +194,12 @@
                   <Circle fx:id="maxTempIcon" fill="DODGERBLUE" layoutX="246.0" layoutY="48.0" radius="21.0" stroke="BLACK" strokeType="INSIDE" />
                   <Label layoutX="14.0" layoutY="6.0" prefHeight="17.0" prefWidth="64.0" text="TEMP MIN" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif" size="11.0" />
                      </font>
                   </Label>
-                  <Label alignment="CENTER" layoutX="148.0" layoutY="6.0" prefHeight="17.0" prefWidth="64.0" text="TEMP MAX" textFill="WHITE">
+                  <Label layoutX="137.0" layoutY="6.0" prefHeight="17.0" prefWidth="64.0" text="TEMP MAX" textFill="WHITE">
                      <font>
-                        <Font name="Arial Bold" size="11.0" />
+                        <Font name="PT Serif" size="11.0" />
                      </font>
                   </Label>
                   <Label fx:id="lowTemp" layoutX="14.0" layoutY="33.0" prefHeight="30.0" prefWidth="56.0" textFill="#a300a3">
@@ -216,4 +217,4 @@
          </children>
       </Group>
    </children>
-</StackPane>
+</AnchorPane>
