--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/MainScene.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/MainScene.fxml
@@ -6,13 +6,11 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane fx:id="mainApplicationLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="700.0" style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.MainController">
+<BorderPane fx:id="mainApplicationLayout" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"  style="-fx-background-color: #f0f8fc;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.MainController">
     <center>
         <fx:include source="fxml/weatherScene.fxml" />
     </center>
-<left>
-    
-</left>
+
    <left>
       <AnchorPane prefHeight="400.0" prefWidth="126.0" style="-fx-background-color: #1b1b1b;" BorderPane.alignment="CENTER">
          <children>
