--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ColorPicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
@@ -13,12 +14,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
 <AnchorPane fx:id="rootQuoteAnchorPane" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #201932;" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.weatherreport.weatherreport.controllers.QuoteController">
    <children>
       <Group layoutX="71.0" layoutY="70.0">
          <children>
-            <Rectangle fx:id="imageContainer" arcHeight="5.0" arcWidth="5.0" fill="#1b1b1b" height="261.0" stroke="BLACK" strokeType="INSIDE" width="458.0" />
+            <ImageView fx:id="imageContainer" fitHeight="261.0" fitWidth="458.0" pickOnBounds="true" preserveRatio="true" />
+            <Rectangle fx:id="rectangleContainer" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="261.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="458.0" />
             <HBox alignment="CENTER" layoutX="89.0" layoutY="36.0" prefHeight="189.0" prefWidth="286.0">
                <children>
                   <VBox alignment="CENTER" prefHeight="189.0" prefWidth="287.0">
@@ -43,9 +44,9 @@
          <children>
             <HBox>
                <children>
-                  <Button fx:id="generateQuote" contentDisplay="CENTER" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" style="-fx-background-radius: 4;" text="Generate" />
+                  <Button fx:id="generateQuote" contentDisplay="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="87.0" style="-fx-background-radius: 4;" text="Generate" />
                   <Pane prefHeight="25.0" prefWidth="9.0" />
-                  <Button focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" style="-fx-background-radius: 4;" text="Save" />
+                  <Button fx:id="saveButton" focusTraversable="false" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" style="-fx-background-radius: 4;" text="Save" />
                </children>
             </HBox>
          </children>
