--- a/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
+++ b/WeatherReport/src/main/resources/com/weatherreport/weatherreport/fxml/QuotesEditor.fxml
@@ -56,9 +56,9 @@
       </HBox>
       <HBox fx:id="filterBar" alignment="CENTER" layoutX="-1.0" layoutY="373.0" prefHeight="30.0" prefWidth="600.0" style="-fx-spacing: 5;" visible="false">
          <children>
+            <Button fx:id="originalButton" mnemonicParsing="false" text="Original" />
             <Button fx:id="grayscaleFilter" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Grayscale" textAlignment="CENTER" />
-            <Button fx:id="bwFilter" focusTraversable="false" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Inverted" />
-            <Button fx:id="BWFilterButton" focusTraversable="false" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="BW" />
+            <Button fx:id="invertedButton" focusTraversable="false" mnemonicParsing="false" prefHeight="26.0" prefWidth="86.0" text="Inverted" />
             <Button fx:id="backButton" focusTraversable="false" mnemonicParsing="false" text="Back" />
          </children>
       </HBox>
